lab1/Test/L1-A-0-22.output
Error Type A at Line 7
Error Type A at Line 9
Error Type A at Line 13
Error Type A at Line 14
Error Type A at Line 18
