lab1/Test/L1-A-0-22.cmm
struct e ;
int x [ 1722900352 ] [ 1431399260 ] [ 433142383 ] 
  [ 1203465657 ] [ 527281209 ] [ 90403228 ] , upuSDNHfnR4Qx1U3qZ 
  [ 630466327 ] [ 1456764098 ] [ 1921633998 ] , _FT6gHzhi_ 


;&
struct bbMBbuhdcUvsybtTYv7 eurRQdxXcrE94Auuq4 ( struct 
  ZAW9aVRe `F88qLeyWTgb4S7Q5wA2N , struct TREL msoM5WqBV7s 
  ) {
  int K2pLKAd6IjD9 = - YUP36MJMeM3OKPGbU = ti ;
  struct zfygwb {
  }cSb8R6QnxaokYm9SQFdt , gudY_a06GGyOi7EsEwGO $;
  float x4b3Y $[ 1581908968 ] [ 1819635083 ] [ 580149776 
    ] [ 156275812 ] = r1z39g8GDNHAF9dj , jPvP7kTK7bcNg 
    ;
}
~